# mullvad-socks

./: .gitignore  .woodpecker.yaml  Cargo.toml  PKGBUILD  README.md  bacon.toml  mullvad_socks.openrc
.github/: dependabot.yml
.github/workflows/: build-release.yml  run-tests.yml
mvs_cli/: Cargo.toml  README.md  mvs_cli.rs
mvs_lib/: Cargo.toml  README.md  mvs_lib.rs
mvs_web/: Cargo.toml  README.md  mvs-web.rc  service.rc
mvs_web/src/: env.rs  filter.rs  locations.rs  main.rs  proxydata.rs  version.rs
