[workspace]
resolver = "2"
members = ["mvs_cli", "mvs_lib", "mvs_web"]

[workspace.package]
edition = "2024"
description = "Filter Mullvad's SOCKS5 proxies by country, city, datacenter, weight and online status"
readme = "README.md"
keywords = ["mullvad", "socks5", "filter", "proxy", "api"]

[workspace.dependencies]
anyhow = "1.0.*"
axum = "0.8.*"
axum-macros = "0.5.*"
clap = { version = "4.5.*", features = ["derive"] }
const_format = "0.2.*"
deunicode = "1.6.*"
env_logger = { version = "0.11.*", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.*"
rand = "0.9.*"
reqwest = { version = "0.12.*", default-features = false, features = [
    "blocking",
    "http2",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = { version = "1.45.*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
