[package]
name = "mvs_cli"
version = "0.6.1"
edition.workspace = true
description.workspace = true
readme.workspace = true
keywords = ["mullvad", "socks5", "proxy", "filter", "cli"]

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
mvs_lib = { path = "../mvs_lib" }
rand = "0.9.*"
reqwest = { version = "0.12.*", default-features = false, features = [
    "blocking",
    "http2",
    "json",
    "rustls-tls",
] }
serde_json = "1.0.*"

[[bin]]
name = "mvs-cli"
path = "mvs_cli.rs"
