[package]
name = "mvs_cli"
version = "0.7.1"
edition.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
clap.workspace = true
mvs_lib = { path = "../mvs_lib" }
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[[bin]]
name = "mvs-cli"
path = "mvs_cli.rs"
