[package]
name = "mvs_cli"
version = "0.7.1"
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
clap.workspace = true
mvs_lib.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[[bin]]
name = "mvs-cli"
path = "mvs_cli.rs"
