[package]
name = "mvs_lib"
version = "1.6.1"
edition.workspace = true
description.workspace = true
readme.workspace = true
keywords = ["mullvad", "socks5", "filter", "api", "json"]

[dependencies]
deunicode.workspace = true
serde.workspace = true

[dev-dependencies]
reqwest.workspace = true

[lib]
name = "mvs_lib"
path = "mvs_lib.rs"
