[package]
name = "mvs_lib"
version = "1.7.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
deunicode.workspace = true
serde.workspace = true

[dev-dependencies]
reqwest.workspace = true

[lib]
name = "mvs_lib"
path = "mvs_lib.rs"
