[package]
name = "mvs_web"
version = "1.2.0"
edition.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-macros.workspace = true
const_format.workspace = true
env_logger.workspace = true
log.workspace = true
mvs_lib = { path = "../mvs_lib" }
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true

[[bin]]
name = "mvs-web"
path = "src/main.rs"
